# srmilter

./: .gitignore  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
examples/: example_1.rs  example_2.rs  example_3.rs  example_4.rs
src/: classify_example.rs  cli.rs  daemon.rs  lib.rs  macros.rs  main.example.rs  main.rs  milter.rs  reader_extention.rs  spamhaus_zen.rs  srmilter.classify.example.rs
test_mails/: 0001_q.eml  0002_nq.eml
tests/: access.rs  parse.eml  parse.rs  parse_001.eml  parse_003.eml  readarray.rs  regexp.rs
