[package]
name = "srmilter"
version = "1.0.0"
edition = "2024"

[features]
default = ["systemd"]
systemd = ["dep:systemd"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
fast_html2md = "0.0.48"
lazy-regex = "3.4.1"
mail-parser = "0.11.0"
nix = { version = "0.30.1", features = ["signal"] }
socket2 = { version = "0.6.0", features = ["all"] }
systemd = { version = "0.10.0", optional = true }

[dev-dependencies]
tempfile = "3.23.0"
