[package]
name = "srmilter"
version = "3.0.0"
edition = "2024"
authors = ["Donald Buczek <buczek@molgen.mpg.de>"]
description = "A Rust library for building mail filter (milter) daemons that integrate with Postfix"
repository = "https://github.molgen.mpg.de/molgen/srmilter"
readme = "README.md"
keywords = ["milter", "postfix", "email", "mail-filter", "spam"]
categories = ["email", "network-programming"]
license = "EUPL-1.2"

[features]
default = ["systemd"]
systemd = ["dep:systemd"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
fast_html2md = "0.0.55"
mail-parser = "0.11.0"
nix = { version = "0.30.1", features = ["signal"] }
socket2 = { version = "0.6.0", features = ["all"] }
systemd = { version = "0.10.0", optional = true }

[dev-dependencies]
lazy-regex = "3.4.1"
tempfile = "3.23.0"
